Add _animations to the main scss file

--- a/scss/ohmyfood.scss
+++ b/scss/ohmyfood.scss
@@ -1,6 +1,9 @@
 // Variables
 @import "variables";
 
+//Animations
+@import "animations";
+
 // Application
 @import "scaffolding";
 @import "loader";
