--- a/scss/_animations.scss
+++ b/scss/_animations.scss
@@ -1,5 +1,34 @@
 /**
-  * Home
+  * Animation for the DOT to fade-in then fade-out.
+  */
+  @keyframes fade-in-out {
+    0% {
+      transform: scale(0);
+    }
+
+    50% {
+      transform: scale(1);
+      opacity: 1;
+    }
+
+    100% {
+        transform: scale(0);
+        opacity: 0;
+      }
+  }
+
+  /**
+   * Animation for the loader to fade out.
+   */
+  @keyframes loader-out {
+    100% {
+      opacity: 0;
+      z-index: -1;
+    }
+  }
+
+/**
+  * Animation for the like icon.
   */
 @keyframes fade-in {
     0% {
