--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -143,6 +143,10 @@
     width: 100%;
     background-color: #FFFFFF;
 
+    &:hover {
+        color: inherit;
+    }
+
     &-image {
         object-fit: cover;
         width: 100%;
@@ -198,7 +202,7 @@
             animation: fade-out 0.2s;
             animation-iteration-count: 1;
             animation-fill-mode: forwards;
-            animation-delay: 1.1s;
+            animation-delay: .5s;
         }
 
         i {
