--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -175,6 +175,12 @@
 
     &-infos {
 
+        &:hover {
+            background-image: linear-gradient(0deg, rgba(255, 121, 218, .9) 0%, rgba(147, 86, 220, .9) 100%);
+            background-clip: text;
+            -webkit-text-fill-color:transparent;
+        }
+
         &-title {
             margin: 0;
             font-size: 22px;
@@ -199,10 +205,9 @@
         }
 
         &:hover > &-regular {
-            animation: fade-out 0.2s;
-            animation-iteration-count: 1;
-            animation-fill-mode: forwards;
-            animation-delay: .5s;
+            background: linear-gradient(0deg, rgba(255, 121, 218, .9) 0%, rgba(147, 86, 220, .9) 100%);
+            background-clip: text;
+            -webkit-text-fill-color:transparent;
         }
 
         i {
