--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -14,8 +14,10 @@
         gap: 30px;
     }
 
-    .operations-step {
+    .operations-step,
+    .subcard {
         flex: 1;
+        width: 30%;
     }
 
     .card {
