--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,3 +1,8 @@
 $ohmyfood-primary: #9356DC;
 $ohmyfood-secondary: #FF79DA;
 $ohmyfood-tertiary: #99E2D0;
+
+/**
+ * Menu
+ */
+$menu-image-height: 550px;
