--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -6,6 +6,13 @@
     padding: 22px;
     box-shadow: 0 0 .5rem rgba(0,0,0,.25);
 
+    &-return {
+        position: absolute;
+        font-size: 22px;
+        line-height: 36px;
+        color: #5a5a5a;
+    }
+
     &-brand {
         margin: 0;
         text-align: center;
