--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -34,6 +34,7 @@
     }
 
     &-button {
+        display: inline-block;
         padding: 15px 30px;
         font-weight: 500;
         border-radius: 40px;
@@ -163,7 +164,7 @@
         &:hover {
             background-image: linear-gradient(0deg, rgba(255, 121, 218, .9) 0%, rgba(147, 86, 220, .9) 100%);
             background-clip: text;
-            -webkit-text-fill-color:transparent;
+            color: transparent;
         }
 
         &-title {
@@ -192,7 +193,7 @@
         &:hover > &-regular {
             background: linear-gradient(0deg, rgba(255, 121, 218, .9) 0%, rgba(147, 86, 220, .9) 100%);
             background-clip: text;
-            -webkit-text-fill-color:transparent;
+            color: transparent;
         }
 
         i {
@@ -204,7 +205,7 @@
         &-solid {
             background: linear-gradient(0deg, rgba(255, 121, 218, .9) 0%, rgba(147, 86, 220, .9) 100%);
             background-clip: text;
-            -webkit-text-fill-color:transparent;
+            color: transparent;
             opacity: 0;
         }
     }
