--- a/css/ohmyfood.css
+++ b/css/ohmyfood.css
@@ -412,6 +412,7 @@ a:hover {
 .card-infos:hover {
   background-image: linear-gradient(0deg, rgba(255, 121, 218, 0.9) 0%, rgba(147, 86, 220, 0.9) 100%);
   background-clip: text;
+  -webkit-background-clip: text;
   color: transparent;
 }
 .card-infos-title {
@@ -436,6 +437,7 @@ a:hover {
 .card-like:hover > .card-like-regular {
   background: linear-gradient(0deg, rgba(255, 121, 218, 0.9) 0%, rgba(147, 86, 220, 0.9) 100%);
   background-clip: text;
+  -webkit-background-clip: text;
   color: transparent;
 }
 .card-like i {
@@ -446,6 +448,7 @@ a:hover {
 .card-like-solid {
   background: linear-gradient(0deg, rgba(255, 121, 218, 0.9) 0%, rgba(147, 86, 220, 0.9) 100%);
   background-clip: text;
+  -webkit-background-clip: text;
   color: transparent;
   opacity: 0;
 }
