--- a/scss/_animations.scss
+++ b/scss/_animations.scss
@@ -44,58 +44,6 @@
 /**
   * Animation for submenu.
   */
-
-.bounce-in-right {
-    animation: bounce-in-right 1s ease 1 forwards;
-}
-
-@keyframes bounce-in-right {
-  0% {
-    opacity: 0;
-    transform: translateX(2000px);
-  }
-  60% {
-    opacity: 1;
-    transform: translateX(-30px);
-  }
-  80% { transform: translateX(10px); }
-  100% { transform: translateX(0); }
-}
-
-.bounce-in-left {
-    animation: bounce-in-left 1s ease 1 forwards;
-}
-
-@keyframes bounce-in-left {
-  0% {
-    opacity: 0;
-    transform: translateX(-2000px);
-  }
-  60% {
-    opacity: 1;
-    transform: translateX(+30px);
-  }
-  80% { transform: translateX(-10px); }
-  100% { transform: translateX(0); }
-}
-
-.bounce-in-up {
-    animation: bounce-in-up 1s ease 1 forwards;
-}
-
-@keyframes bounce-in-up {
-  0% {
-    opacity: 0;
-    transform: translateY(-2000px);
-  }
-  60% {
-    opacity: 1;
-    transform: translateY(+30px);
-  }
-  80% { transform: translateY(-10px); }
-  100% { transform: translateY(0); }
-}
-
 .bounce-in-down {
     animation: bounce-in-down 1s ease 1 forwards;
 }
@@ -103,24 +51,13 @@
 @keyframes bounce-in-down {
   0% {
     opacity: 0;
-    transform: translateY(2000px);
+    transform: translateY(30px);
   }
-  60% {
+  100% {
     opacity: 1;
-    transform: translateY(-30px);
+    transform: translateY(0);
   }
-  80% { transform: translateY(10px); }
-  100% { transform: translateY(0); }
 }
-
-.pulse {
-    animation: pulse 1s ease-in 1 forwards;
-  }
-  @keyframes pulse {
-    0% { transform: scale(0.4); }
-    60% { transform: scale(1.1); }
-    100% { transform: scale(1); }
-  }
 
 .delay-1 {
     animation-delay: 0.1s;
@@ -136,4 +73,19 @@
 }
 .delay-5 {
     animation-delay: 0.5s;
+}
+.delay-6 {
+  animation-delay: 0.6s;
+}
+.delay-7 {
+  animation-delay: 0.7s;
+}
+.delay-8 {
+  animation-delay: 0.8s;
+}
+.delay-9 {
+  animation-delay: 0.9s;
+}
+.delay-10 {
+  animation-delay: 1s;
 }
