--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -39,13 +39,13 @@
         font-weight: 500;
         border-radius: 40px;
         color: #FFFFFF;
-        background: linear-gradient(180deg, rgba(255, 121, 218, .9) 0%, rgba(147, 86, 220, .9) 100%);
+        background: $gradient-background-inversed;
         box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
 
         &:hover {
             color: #FFFFFF;
             box-shadow: 3px 3px 10px rgba(0,0,0,.4);
-            background: linear-gradient(180deg, rgba(255, 121, 218, 0.8) 0%, rgba(147, 86, 220, 0.8) 100%);
+            background: $gradient-background-inversed;
         }
     }
 }
@@ -162,7 +162,7 @@
     &-infos {
 
         &:hover {
-            background-image: linear-gradient(0deg, rgba(255, 121, 218, .9) 0%, rgba(147, 86, 220, .9) 100%);
+            background-image: $gradient-background;
             background-clip: text;
             -webkit-background-clip:text;
             color: transparent;
@@ -192,7 +192,7 @@
         }
 
         &:hover > &-regular {
-            background: linear-gradient(0deg, rgba(255, 121, 218, .9) 0%, rgba(147, 86, 220, .9) 100%);
+            background: $gradient-background;
             background-clip: text;
             -webkit-background-clip:text;
             color: transparent;
@@ -205,7 +205,7 @@
         }
 
         &-solid {
-            background: linear-gradient(0deg, rgba(255, 121, 218, .9) 0%, rgba(147, 86, 220, .9) 100%);
+            background: $gradient-background;
             background-clip: text;
             -webkit-background-clip:text;
             color: transparent;
